# mokm-motionEditor

./: .gitmodules  Readme.md  implementation_plan.md
.zed/: settings.json  tasks.json
docs/: code_extra.md  composition.md  extra_info.md  funtions.md  implementation_plan.md  layout.md  packages.md  tools.md
docs/state/: timeline.md
motionEditor/: .qmlls.ini  CMakeLists.txt  CMakePresets.json  main.cpp
motionEditor/src/core/: AnimatableProperty.h  Clip.h  Composition.cpp  Composition.h  FrameTypes.h  Layer.cpp  Layer.h  MediaDecoder.cpp  MediaDecoder.h  ThorVGClip.cpp  ThorVGClip.h  Track.cpp  Track.h  Types.h  VideoClip.cpp  VideoClip.h  ViewportRenderer.cpp  ViewportRenderer.h
motionEditor/src/pages/: Main.qml
motionEditor/src/pages/components/: ProjectCard.qml  PropertiesPanel.qml  StyledComboBox.qml  StyledPanel.qml
motionEditor/src/pages/components/fragments/: AddTrackDialog.qml  ColorField.qml  KeyframeDiamond.qml  NumberSlider.qml  PropertyRow.qml  ThemedIcon.qml  TrackTypeConfig.qml
motionEditor/src/pages/components/timeline/: TimelineLayerHeader.qml  TimelineTrackHeader.qml
motionEditor/src/pages/tabs/: AudioEditorTab.qml  GraphEditorTab.qml  NodeEditorTab.qml  TimelineTab.qml
motionEditor/src/providers/: CMakeLists.txt  projectsettings.cpp  projectsettings.h
third_parties/install/otio/lib/: libopentime.so.0.19.0  libopentime.so.19  libopentimelineio.so.0.19.0  libopentimelineio.so.19
third_parties/install/otio/lib/cmake/Imath/: ImathTargets.cmake
third_parties/install/otio/lib/cmake/opentime/: OpenTimeConfig.cmake  OpenTimeTargets-release.cmake  OpenTimeTargets.cmake
third_parties/install/otio/lib/cmake/opentimelineio/: OpenTimelineIOConfig.cmake  OpenTimelineIOConfigVersion.cmake  OpenTimelineIOTargets-release.cmake  OpenTimelineIOTargets.cmake
third_parties/install/otio/lib/pkgconfig/: Imath.pc
